# Spaceship-Titanic

./: .gitignore  README.md  main.py  pyproject.toml
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: base.yaml  optuna.yaml  simple.yaml  simple_optuna.yaml  stacking.yaml
conf/model/: catboost_optuna.yaml  extratrees.yaml  gradientboosting.yaml  kneighbors.yaml  lightgbm.yaml  randomforest.yaml  stacking.yaml
conf/model/params/: catboost.yaml  catboost_optuna.yaml  extratrees.yaml  gradientboosting.yaml  kneighbors.yaml  lightgbm.yaml  randomforest.yaml  stacking.yaml  xgboost.yaml
data/: __init__.py  data.py  utils.py
experiment/: __init__.py  experiment.py  optuna.py  utils.py
model/: __init__.py  base_model.py  get_model.py  model.py
stustudy/: stustudy.py
