[tool.poetry]
name = "spaceship-titanic"
version = "0.1.0"
description = ""
authors = ["kou1218 <koudai141218@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.2"
hydra-core = "^1.3.2"
xgboost = "^2.0.3"
optuna = "^3.6.1"
lightgbm = "^4.3.0"
catboost = "^1.2.5"
dtreeviz = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
